<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <LinearLayout

        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/signup_user_name"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/signup_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/signup_user_name_hint"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/signup_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:onClick="onChangeProfilePhotoClicked"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <TextView
            android:text="@string/signup_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_first_name"
            android:hint="@string/signup_first_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:text="@string/signup_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_last_name"
            android:hint="@string/signup_last_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:text="@string/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_email"
            android:hint="@string/signup_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:text="@string/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_password"
            android:hint=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPassword"/>

        <TextView
            android:text="@string/signup_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_phone_number"
            android:inputType="number"
            android:hint="@string/signup_phone_number_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:text="Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <RadioGroup
            android:id="@+id/profileGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/profileFemale"
                android:text="@string/signup_gender_female"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"/>
            <RadioButton
                android:id="@+id/profileMale"
                android:text="@string/signup_gender_male"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"/>
        </RadioGroup>

        <TextView
            android:text="@string/signup_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_country"
            android:hint="@string/signup_country_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:text="@string/signup_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/signup_city"
            android:hint="@string/signup_city_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:onClick="onSignupSaveClicked"
                android:text="@string/button_save"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"/>

            <Button
                android:onClick="onSignupCancelClicked"
                android:text="@string/button_cancel"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
